Fix nav spacing on desktop

--- a/src/index.scss
+++ b/src/index.scss
@@ -75,6 +75,7 @@ html {
 
   h1, h3 {
     color: $light-blue;
+    font-size: 1.4em;
   }
 }
 
@@ -147,7 +148,8 @@ html {
       display: flex;
       flex-direction: row;
       justify-content: space-between;
-      width: 30%;
+      width: 75%;
+      max-width: 20em;
     }
   }
 
@@ -198,6 +200,8 @@ html {
 
     hr {
       border-top: 2px dotted white;
+      width: 80%;
+      margin: 0 auto;
     }
 
     .icons {
